--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@ http://www.templatemo.com/tm-486-new-event
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand"><img src="./images/logo.png" alt="Logo" /></a>
+                <div style="display: flex; justify-content: start; align-items: center; gap: 10px;">
+                    <a href="#" class="navbar-brand student-branch-img"><img src="./images/ieee_logo.png"
+                            alt="Logo" /></a>
+                    <a href="#" class="navbar-brand"><img src="./images/logo.png" alt="Logo" /></a>
+                </div>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -67,7 +71,7 @@ http://www.templatemo.com/tm-486-new-event
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#speakers" class="nav-link">Commitee</a></li>
                     <!-- <li class="nav-item"><a href="#program" class="nav-link">Programs</a></li> -->
-                    <li class="nav-item"><a href="#venue" class="nav-link">Gallary</a></li>
+                    <li class="nav-item"><a href="#galary" class="nav-link">Gallary</a></li>
                     <!-- <li class="nav-item"><a href="#sponsors" class="nav-link">Sponsors</a></li> -->
                     <!-- <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> -->
                 </ul>
@@ -93,8 +97,9 @@ INTRO SECTION
                     <h6 class="wow bounceIn" data-wow-delay="0.9s">Haven't registered for Open Day 2024 yet ? Don't
                         miss out, secure your spot by registering now.</h6>
                     <div id="countdown" class="wow bounceInDown" data-wow-delay="0.9s"></div>
-                    <a href="#register" class="btn btn-lg btn-danger wow fadeInUp nav-link"
-                        data-wow-delay="2.3s">REGISTER NOW</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWRlDKk3EXE20OYXKerNzS149ZYRjEH9UmDG4VB_f9sTZJgA/viewform?usp=sf_link"
+                        class="btn btn-lg btn-danger wow fadeInUp nav-link" data-wow-delay="2.3s"
+                        target="_blank">REGISTER NOW</a>
                 </div>
 
 
@@ -127,9 +132,12 @@ about SECTION
                         opportunity to learn more about IEEE, its activities, and the latest trends in technology.</p>
                     <h6>Connect with Us</h6>
                     <ul class="social-icon-about">
-                        <li><a href="https://www.facebook.com/share/9cUg2CmxVbCkQ34V" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
-                        <li><a href="#" class="fa fa-instagram wow fadeInUp" data-wow-delay="1.3s"></a></li>
-                        <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="1.6s"></a></li>
+                        <li><a href="https://www.facebook.com/share/9cUg2CmxVbCkQ34V"
+                                class="fa fa-facebook wow fadeInUp" data-wow-delay="1s" target="_blank"></a></li>
+                        <li><a href="https://www.instagram.com/ieee_uwu?igsh=MWZuY2NtZGtncmw0dw=="
+                                class="fa fa-instagram wow fadeInUp" data-wow-delay="1.3s" target="_blank"></a></li>
+                        <li><a href="https://www.linkedin.com/company/uwuieee/" class="fa fa-linkedin wow fadeInUp"
+                                data-wow-delay="1.6s" target="_blank"></a></li>
                     </ul>
                 </div>
 
@@ -240,7 +248,8 @@ SPEAKERS SECTION
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="./images/Ashen Vimukthi.jpeg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Ashen Vimukthi.jpeg" alt="images/speakers-img2.jpg"
+                                class="img-responsive">
                             <h3>Ashen Vimukthi</h3>
                             <p>Lead</p>
                         </div>
@@ -310,7 +319,8 @@ SPEAKERS SECTION
                     <h1>Design Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
-                            <img src="./images/Mohamed Nisfan.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Mohamed Nisfan.jpg" alt="images/speakers-img2.jpg"
+                                class="img-responsive">
                             <h3>Mohamed Nisfan</h3>
                             <p>Lead</p>
                         </div>
@@ -341,7 +351,8 @@ SPEAKERS SECTION
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="./images/Akash Vidanage.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
+                            <img src="./images/Akash Vidanage.jpg" alt="images/speakers-img2.jpg"
+                                class="img-responsive">
                             <h3>Akash Vidanage</h3>
                             <p>Member</p>
                         </div>
@@ -488,15 +499,15 @@ PROGRAM SECTION
 
                 <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.6s">
                     <div class="section-title">
-                        <h2 style="color: rgb(0, 0, 57); font-weight: 700;">Agenda</h2>
+                        <h2 style="color: rgb(0, 0, 57); font-weight: 700;">Session Agenda</h2>
                     </div>
                 </div>
 
                 <div class="wow fadeInUp col-md-10 col-sm-10" data-wow-delay="0.9s">
                     <ul class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#fday" aria-controls="fday" role="tab" data-toggle="tab">Session
+                        <li class="active"><a href="#fday" aria-controls="fday" role="tab" data-toggle="tab">First Half
                                 Agenda</a></li>
-                        <li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">BoneFire Agenda</a></li>
+                        <li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">Second Half Agenda</a></li>
                     </ul>
                     <div class="tab-content">
 
@@ -533,9 +544,9 @@ FAQ SECTION
 
 
     <!-- =========================
-VENUE SECTION
+galary SECTION
 ============================== -->
-    <section id="venue" class="parallax-section">
+    <section id="galary" class="parallax-section">
         <div class="container">
             <div class="row">
 
@@ -658,9 +669,12 @@ FOOTER SECTION
                         </div>
                     </div>
                     <ul class="social-icon">
-                        <li><a href="https://www.facebook.com/share/9cUg2CmxVbCkQ34V" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
-                        <li><a href="#" class="fa fa-instagram wow fadeInUp" data-wow-delay="1.3s"></a></li>
-                        <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="1.6s"></a></li>
+                        <li><a href="https://www.facebook.com/share/9cUg2CmxVbCkQ34V"
+                                class="fa fa-facebook wow fadeInUp" data-wow-delay="1s" target="_blank"></a></li>
+                        <li><a href="https://www.instagram.com/ieee_uwu?igsh=MWZuY2NtZGtncmw0dw=="
+                                class="fa fa-instagram wow fadeInUp" data-wow-delay="1.3s" target="_blank"></a></li>
+                        <li><a href="https://www.linkedin.com/company/uwuieee/" class="fa fa-linkedin wow fadeInUp"
+                                data-wow-delay="1.6s" target="_blank"></a></li>
                     </ul>
                     <hr>
                     <p class="wow fadeInUp" data-wow-delay="0.6s">&copy; IEEE OPENDAY 2024 - All Rights Reserved</p>
@@ -700,7 +714,7 @@ FOOTER SECTION
     </script>
     <script>
         // Set the date we're counting down to
-        var countDownDate = new Date("Aug 2, 2024 00:00:00").getTime();
+        var countDownDate = new Date("Aug 3, 2024 09:00:00").getTime();
 
         // Update the count down every 1 second
         var x = setInterval(function () {
@@ -744,23 +758,15 @@ FOOTER SECTION
             { time: '1.45 - 2.05pm', description: 'Year plan' },
             { time: '2.05 - 2.35pm', description: 'Keynote speech 1' },
             { time: '2.05 - 2.20pm', description: 'break' },
-            { time: '2.20 - 2.40pm', description: 'keynote speech 2' },
-            { time: '2.40 - 2.50pm', description: 'Announcing winners and prize giving' },
-            { time: '2.50 - 3.00pm', description: 'Vote of thanks' },
-            { time: '3.00 - 3.05pm', description: 'National anthem' },
+
 
         ];
 
         const events2 = [
-            { time: '7.00 - 7.05pm', description: 'Welcome speech' },
-            { time: '7.05 - 7.10pm', description: 'starting fire' },
-            { time: '7.10 - 7.20pm', description: 'singing' },
-            { time: '7.20 - 7.40pm', description: 'entertainment event(' },
-            { time: '7.40 - 8.00pm', description: 'Refreshments' },
-            { time: '8.00 - 8.30pm', description: 'Guest speak' },
-            { time: '8.30 - 8.40pm', description: 'group game' },
-            { time: '8.40 - 8.50pm', description: 'singing' },
-            { time: '8.50 - 9.00pm', description: 'ending speech' },
+            { time: '2.20 - 2.40pm', description: 'keynote speech 2' },
+            { time: '2.40 - 2.50pm', description: 'Announcing winners and prize giving' },
+            { time: '2.50 - 3.00pm', description: 'Vote of thanks' },
+            { time: '3.00 - 3.05pm', description: 'National anthem' },
         ];
 
         // Function to create event elements
