--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ http://www.templatemo.com/tm-486-new-event
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#speakers" class="nav-link">Commitee</a></li>
                     <!-- <li class="nav-item"><a href="#program" class="nav-link">Programs</a></li> -->
-                    <li class="nav-item"><a href="#galary" class="nav-link">Gallary</a></li>
+                    <li class="nav-item"><a href="#venue" class="nav-link">Gallary</a></li>
                     <!-- <li class="nav-item"><a href="#sponsors" class="nav-link">Sponsors</a></li> -->
                     <!-- <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> -->
                 </ul>
@@ -544,9 +544,9 @@ FAQ SECTION
 
 
     <!-- =========================
-galary SECTION
+VENUE SECTION
 ============================== -->
-    <section id="galary" class="parallax-section">
+    <section id="venue" class="parallax-section">
         <div class="container">
             <div class="row">
 
