--- a/gallery.html
+++ b/gallery.html
@@ -2,149 +2,157 @@
 <html lang="en">
 
 <head>
-    <title>IEEE OpenDay | 2023 Gallery</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <title>IEEE OpenDay | 2023 Gallery</title>
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.css">
-    <link rel="stylesheet" href="css/owl.carousel.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/owl.theme.css">
+        <link rel="stylesheet" href="css/owl.carousel.css">
 
-    <!-- Main css -->
-    <!--    <link rel="stylesheet" href="css/style.css">-->
-    <link rel="stylesheet" href="css/gallery.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+        <!-- Main css -->
+        <!--    <link rel="stylesheet" href="css/style.css">-->
+        <link rel="stylesheet" href="css/gallery.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
+                integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
+                crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
-        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-    <!-- Google Font -->
-    <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
+                integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ"
+                crossorigin="anonymous">
+        <!-- Google Font -->
+        <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body data-spy="scroll" data-offset="50" data-target=".navbar-collapse">
 
-    <div class="navbar navbar-fixed-top custom-navbar" role="navigation">
-        <div class="container">
+        <div class="navbar navbar-fixed-top custom-navbar" role="navigation">
+                <div class="container">
 
-            <!-- navbar header -->
-            <div class="navbar-header">
-                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                </button>
-                <a href="#" class="navbar-brand"><img src="images/logo.png" alt="Logo" /></a>
-            </div>
+                        <!-- navbar header -->
+                        <div class="navbar-header">
+                                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                        <span class="icon icon-bar"></span>
+                                        <span class="icon icon-bar"></span>
+                                        <span class="icon icon-bar"></span>
+                                </button>
+                                <div style="display: flex; justify-content: start; align-items: center; gap: 10px;">
+                                        <a href="#" class="navbar-brand student-branch-img"><img
+                                                        src="./images/ieee_logo.png" alt="Logo" /></a>
+                                        <a href="#" class="navbar-brand"><img src="./images/logo.png" alt="Logo" /></a>
+                                </div>
+                        </div>
 
-            <div class="collapse navbar-collapse">
+                        <div class="collapse navbar-collapse">
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item"><a href="index.html#intro" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="index.html#about" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="index.html#speakers" class="nav-link">Commitee</a></li>
-                    <!-- <li class="nav-item"><a href="index.html#program" class="nav-link">Programs</a></li> -->
-                    <li class="nav-item"><a href="index.html#venue" class="nav-link">Gallary</a></li>
-                    <!-- <li class="nav-item"><a href="index.html#sponsors" class="nav-link">Sponsors</a></li> -->
-                    <!-- <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> -->
-                </ul>
+                                <ul class="nav navbar-nav navbar-right">
+                                        <li class="nav-item"><a href="index.html#intro" class="nav-link">Home</a></li>
+                                        <li class="nav-item"><a href="index.html#about" class="nav-link">About</a></li>
+                                        <li class="nav-item"><a href="index.html#speakers" class="nav-link">Commitee</a>
+                                        </li>
+                                        <!-- <li class="nav-item"><a href="index.html#program" class="nav-link">Programs</a></li> -->
+                                        <li class="nav-item"><a href="index.html#venue" class="nav-link">Gallary</a>
+                                        </li>
+                                        <!-- <li class="nav-item"><a href="index.html#sponsors" class="nav-link">Sponsors</a></li> -->
+                                        <!-- <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> -->
+                                </ul>
 
-            </div>
+                        </div>
 
+                </div>
         </div>
-    </div>
-    <div id="gallery">
-        <div id="galleryTitle">
-            <h1>IEEE OpenDay | 2024</h1>
+        <div id="gallery">
+                <div id="galleryTitle">
+                        <h1>IEEE OpenDay | 2024</h1>
+                </div>
+                <div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4473.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4467.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4470.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4468.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4474.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4471.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4476.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4475.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4481.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4483.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4485.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4478.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4469.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4472.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4484.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_4486.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="images/IMG_5473.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5472.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5483.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5474.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5475.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5477.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5478.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5476.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5480.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5482.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5481.JPG" alt="galleryImg"></div>
+                        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg"
+                                        src="./images/IMG_5479.JPG" alt="galleryImg"></div>
+
+                </div>
         </div>
-        <div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4473.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4467.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4470.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4468.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4474.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4471.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4476.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4475.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4481.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4483.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4485.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4478.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4469.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4472.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4484.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_4486.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5473.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5472.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5483.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5474.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5475.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5477.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5478.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5476.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5480.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5482.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5481.JPG"
-                    alt="galleryImg"></div>
-            <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="./images/IMG_5479.JPG"
-                    alt="galleryImg"></div>
-
-        </div>
-    </div>
 
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.parallax.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
+        <script src="js/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.parallax.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/smoothscroll.js"></script>
+        <script src="js/wow.min.js"></script>
+        <script src="js/custom.js"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
 
-    <script>
-        ScrollReveal({
-            distance: '40px',
-            duration: 2000,
-            delay: 100,
-        });
+        <script>
+                ScrollReveal({
+                        distance: '40px',
+                        duration: 2000,
+                        delay: 100,
+                });
 
-        ScrollReveal().reveal('.imgDiv', { origin: 'bottom' });
-        ScrollReveal().reveal('#galleryTitle', { origin: 'left' });
-    </script>
+                ScrollReveal().reveal('.imgDiv', { origin: 'bottom' });
+                ScrollReveal().reveal('#galleryTitle', { origin: 'left' });
+        </script>
 </body>
 
 </html>
