--- a/gallery.html
+++ b/gallery.html
@@ -44,9 +44,9 @@
                                         <span class="icon icon-bar"></span>
                                 </button>
                                 <div style="display: flex; justify-content: start; align-items: center; gap: 10px;">
-                                        <a href="#" class="navbar-brand student-branch-img"><img
-                                                        src="./images/ieee_logo.png" alt="Logo" /></a>
-                                        <a href="#" class="navbar-brand"><img src="./images/logo.png" alt="Logo" /></a>
+                                        <a href="https://ieeeuwu.live/" class="navbar-brand student-branch-img" target="_blank"><img
+                                                        src="./images/ieee_logo.png" alt="Logo"/></a>
+                                        <a href="index.html" class="navbar-brand"><img src="./images/logo.png" alt="Logo" /></a>
                                 </div>
                         </div>
 
@@ -55,10 +55,10 @@
                                 <ul class="nav navbar-nav navbar-right">
                                         <li class="nav-item"><a href="index.html#intro" class="nav-link">Home</a></li>
                                         <li class="nav-item"><a href="index.html#about" class="nav-link">About</a></li>
-                                        <li class="nav-item"><a href="index.html#speakers" class="nav-link">Commitee</a>
+                                        <li class="nav-item"><a href="index.html#speakers" class="nav-link">Committee</a>
                                         </li>
                                         <!-- <li class="nav-item"><a href="index.html#program" class="nav-link">Programs</a></li> -->
-                                        <li class="nav-item"><a href="index.html#venue" class="nav-link">Gallary</a>
+                                        <li class="nav-item"><a href="index.html#venue" class="nav-link">Gallery</a>
                                         </li>
                                         <!-- <li class="nav-item"><a href="index.html#sponsors" class="nav-link">Sponsors</a></li> -->
                                         <!-- <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> -->
