--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ http://www.templatemo.com/tm-486-new-event
                     <span class="icon icon-bar"></span>
                 </button>
                 <div style="display: flex; justify-content: start; align-items: center; gap: 10px;">
-                    <a href="#" class="navbar-brand student-branch-img"><img src="./images/ieee_logo.png"
-                            alt="Logo" /></a>
+                    <a href="https://ieeeuwu.live/" class="navbar-brand student-branch-img" target="_blank"><img
+                            src="./images/ieee_logo.png" alt="Logo" /></a>
                     <a href="#" class="navbar-brand"><img src="./images/logo.png" alt="Logo" /></a>
                 </div>
             </div>
@@ -69,9 +69,9 @@ http://www.templatemo.com/tm-486-new-event
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item"><a href="#intro" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#speakers" class="nav-link">Commitee</a></li>
+                    <li class="nav-item"><a href="#speakers" class="nav-link">Committee</a></li>
                     <!-- <li class="nav-item"><a href="#program" class="nav-link">Programs</a></li> -->
-                    <li class="nav-item"><a href="#venue" class="nav-link">Gallary</a></li>
+                    <li class="nav-item"><a href="#venue" class="nav-link">Gallery</a></li>
                     <!-- <li class="nav-item"><a href="#sponsors" class="nav-link">Sponsors</a></li> -->
                     <!-- <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> -->
                 </ul>
@@ -91,10 +91,11 @@ INTRO SECTION
 
                 <div class="col-md-12 col-sm-12 home-header">
 
-                    <h1 class="wow fadeInUp" data-wow-delay="1.6s">IEEE OPENDAY 2024</h1>
+                    <h1 class="wow fadeInUp" data-wow-delay="1.6s">IEEE OPEN DAY 2024</h1>
                     <h5 class="wow bounceIn" data-wow-delay="0.9s">For the Betterment of envolving technological world
                         explorers</h5>
-                    <h6 class="wow bounceIn" data-wow-delay="0.9s">Haven't registered for Open Day 2024 yet ? Don't
+                    <h6 class="wow bounceIn" data-wow-delay="0.9s" style="font-size: 20px; line-height: 30px;">Haven't
+                        registered for Open Day 2024 yet ?<br> Don't
                         miss out, secure your spot by registering now.</h6>
                     <div id="countdown" class="wow bounceInDown" data-wow-delay="0.9s"></div>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWRlDKk3EXE20OYXKerNzS149ZYRjEH9UmDG4VB_f9sTZJgA/viewform?usp=sf_link"
@@ -221,26 +222,19 @@ SPEAKERS SECTION
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <h1>Project Chair</h1>
+                    <h1 style="text-decoration: none !important; font-weight: 600;">Project Chair</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
                             <img src="./images/Thipuni Wijesinghe.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
-                            <h3>Thipuni</h3>
+                            <h3>Thipuni Wijesinghe</h3>
                         </div>
                     </div>
                 </div>
 
                 <div class="item">
-                    <h1>Program Team</h1>
+                    <h1 style="text-decoration: none !important; font-weight: 600;">Program Team</h1>
                     <div class="sliderImage">
-                        <div class="imgDiv">
-                            <img src="./images/Asiri Weerasinghe.jpg" alt="images/speakers-img2.jpg"
-                                class="img-responsive">
-                            <h3>Asiri Weerasinghe</h3>
-                            <p>Lead</p>
-                        </div>
-
                         <div class="imgDiv">
                             <img src="./images/Thilini Priyangika.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
@@ -248,10 +242,18 @@ SPEAKERS SECTION
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
+                            <img src="./images/Asiri Weerasinghe.jpg" alt="images/speakers-img2.jpg"
+                                class="img-responsive">
+                            <h3>Asiri Weerasinghe</h3>
+                            <p>Lead</p>
+                        </div>
+
+
+                        <div class="imgDiv">
                             <img src="./images/Ashen Vimukthi.jpeg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Ashen Vimukthi</h3>
-                            <p>Lead</p>
+                            <p>Member</p>
                         </div>
 
                         <div class="imgDiv">
@@ -263,7 +265,7 @@ SPEAKERS SECTION
                 </div>
 
                 <div class="item">
-                    <h1>Web Team</h1>
+                    <h1 style="text-decoration: none !important; font-weight: 600;">Web Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
                             <img src="./images/Indrakumar Powsihan.png" alt="images/speakers-img2.jpg"
@@ -272,35 +274,37 @@ SPEAKERS SECTION
                             <p>Lead</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="./images/Maduja Abhayasundara.JPG" alt="images/speakers-img2.jpg"
-                                class="img-responsive">
-                            <h3>Maduja Abhayasundara</h3>
-                            <p>Member</p>
-                        </div>
-                        <div class="imgDiv">
                             <img src="./images/Sajan Gunasekara.png" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Sajan Gunasekara</h3>
                             <p>Member</p>
                         </div>
+                        <div class="imgDiv">
+                            <img src="./images/Maduja Abhayasundara.JPG" alt="images/speakers-img2.jpg"
+                                class="img-responsive">
+                            <h3>Maduja Abhayasundara</h3>
+                            <p>Member</p>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="item">
-                    <h1>Finance Team</h1>
+                    <h1 style="text-decoration: none !important; font-weight: 600;">Finance Team</h1>
                     <div class="sliderImage">
-                        <div class="imgDiv">
-                            <img src="./images/Malka Sandaruwan.jpg" alt="images/speakers-img2.jpg"
-                                class="img-responsive">
-                            <h3>Malka Sandaruwan</h3>
-                            <p>Lead</p>
-                        </div>
                         <div class="imgDiv">
                             <img src="./images/Shachini Thakshila.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
                             <h3>Shachini Thakshila</h3>
                             <p>Lead</p>
                         </div>
+                        <div class="imgDiv">
+                            <img src="./images/Malka Sandaruwan.jpg" alt="images/speakers-img2.jpg"
+                                class="img-responsive">
+                            <h3>Malka Sandaruwan</h3>
+                            <p>Lead</p>
+                        </div>
+
                         <div class="imgDiv">
                             <img src="./images/Raees Ahamed.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
                             <h3>Raees Ahamed</h3>
@@ -316,7 +320,7 @@ SPEAKERS SECTION
                 </div>
 
                 <div class="item">
-                    <h1>Design Team</h1>
+                    <h1 style="text-decoration: none !important; font-weight: 600;">Design Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
                             <img src="./images/Mohamed Nisfan.jpg" alt="images/speakers-img2.jpg"
@@ -342,7 +346,7 @@ SPEAKERS SECTION
                 </div>
 
                 <div class="item">
-                    <h1>Logistics Team</h1>
+                    <h1 style="text-decoration: none !important; font-weight: 600;">Logistics Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
                             <img src="./images/Kavindu Buddhika.jpeg" alt="images/speakers-img2.jpg"
@@ -350,16 +354,11 @@ SPEAKERS SECTION
                             <h3>Kavindu Buddhika</h3>
                             <p>Lead</p>
                         </div>
-                        <div class="imgDiv">
-                            <img src="./images/Akash Vidanage.jpg" alt="images/speakers-img2.jpg"
-                                class="img-responsive">
-                            <h3>Akash Vidanage</h3>
-                            <p>Member</p>
-                        </div>
+
                         <div class="imgDiv">
                             <img src="./images/Malaka_Chathuranga.jpg" alt="images/speakers-img2.jpg"
                                 class="img-responsive">
-                            <h3>Malaka_Chathuranga</h3>
+                            <h3>Nadeesh Malaka</h3>
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
@@ -368,16 +367,27 @@ SPEAKERS SECTION
                             <h3>Tharindu Devinda</h3>
                             <p>Member</p>
                         </div>
+                        <div class="imgDiv">
+                            <img src="./images/Akash Vidanage.jpg" alt="images/speakers-img2.jpg"
+                                class="img-responsive">
+                            <h3>Akash Vidanage</h3>
+                            <p>Member</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="item">
-                    <h1>Secretary Team</h1>
+                    <h1 style="text-decoration: none !important; font-weight: 600;">Secretary Team</h1>
                     <div class="sliderImage">
                         <div class="imgDiv">
                             <img src="./images/Hashini Sulakshana.jpg" alt="Hashini Sulakshana" class="img-responsive">
                             <h3>Hashini Sulakshana</h3>
                             <p>Lead</p>
+                        </div>
+                        <div class="imgDiv">
+                            <img src="./images/Ahinsa Arunodi .jpg" alt="Ahinsa Arunodi" class="img-responsive">
+                            <h3>Ahinsa Arunodi</h3>
+                            <p>Member</p>
                         </div>
                         <div class="imgDiv">
                             <img src="./images/Sobiya Puvanendrarajah .jpeg" alt="Sobiya Puvanendrarajah"
@@ -386,20 +396,17 @@ SPEAKERS SECTION
                             <p>Member</p>
                         </div>
                         <div class="imgDiv">
-                            <img src="./images/Chamandi Sanjula.jpg" alt="Chamandi Sanjula" class="img-responsive">
-                            <h3>Chamandi Sanjula</h3>
-                            <p>Member</p>
-                        </div>
-                        <div class="imgDiv">
-                            <img src="./images/Ahinsa Arunodi .jpg" alt="Ahinsa Arunodi" class="img-responsive">
-                            <h3>Ahinsa Arunodi</h3>
-                            <p>Member</p>
-                        </div>
-                        <div class="imgDiv">
                             <img src="./images/Tashiya Tishani.jpg" alt="Tashiya Tishani" class="img-responsive">
                             <h3>Tashiya Tishani</h3>
                             <p>Member</p>
                         </div>
+                        <div class="imgDiv">
+                            <img src="./images/Chamandi Sanjula.jpg" alt="Chamandi Sanjula" class="img-responsive">
+                            <h3>Chamandi Sanjula</h3>
+                            <p>Member</p>
+                        </div>
+
+
                     </div>
                 </div>
                 <!-- 
@@ -493,7 +500,7 @@ SPEAKERS SECTION
     <!-- =========================
 PROGRAM SECTION
 ============================== -->
-    <section id="program" class="parallax-section">
+    <!-- <section id="program" class="parallax-section">
         <div class="container">
             <div class="row">
 
@@ -507,19 +514,20 @@ PROGRAM SECTION
                     <ul class="nav nav-tabs" role="tablist">
                         <li class="active"><a href="#fday" aria-controls="fday" role="tab" data-toggle="tab">First Half
                                 Agenda</a></li>
-                        <li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">Second Half Agenda</a></li>
+                        <li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">Second Half Agenda</a>
+                        </li>
                     </ul>
                     <div class="tab-content">
 
                         <div role="tabpanel" class="tab-pane active" id="fday">
                             <div class="col-md-10 col-sm-10" id="events-container">
-                                <!-- Dynamic content will be injected here -->
+                               
                             </div>
                         </div>
 
                         <div role="tabpanel" class="tab-pane" id="sday">
                             <div class="col-md-10 col-sm-10" id="events-container2">
-                                <!-- Dynamic content will be injected here -->
+                               
                             </div>
 
                         </div>
@@ -528,7 +536,7 @@ PROGRAM SECTION
 
                 </div>
             </div>
-    </section>
+    </section> -->
 
 
     <!-- =========================
@@ -650,22 +658,25 @@ FOOTER SECTION
                 <div class="col-md-12 col-sm-12">
                     <img src="./images/logo.png" alt="" width="100" />
                     <h2>Presented By</h2>
-                    <img src="./images/ieee_logo.png" alt="" width="200" />
+                    <a href="https://ieeeuwu.live/" target="_blank"><img src="./images/ieee_logo.png" alt=""
+                            width="200" /></a>
                     <h2 style="padding-top: 20px;">Contact Us</h2>
                     <p><a href="#">ieeesbuwu@gmail.com</a></p>
 
                     <div class="chairperson-detail">
                         <h3>Kavindra (Chairperson : IEEE UWU SB)</h3>
                         <div class="diplay-flex">
-                            <h6>+94 07624548456</h6>
-                            <a href="#" class="fa fa-linkedin" data-wow-delay="1.6s"></a>
+                            <h6 style="color: rgb(220, 221, 221);">+94 77 474 3603</h6>
+                            <a href="https://www.linkedin.com/in/kavindra-weerasinghe/" class="fa fa-linkedin"
+                                data-wow-delay="1.6s" target="_blank"></a>
                         </div>
                     </div>
                     <div class="chairperson-detail">
-                        <h3>Thipuni (Project Chair : IEEE Openday 2024)</h3>
+                        <h3>Thipuni Wijesinghe (Project Chair : IEEE Openday 2024)</h3>
                         <div class="diplay-flex">
-                            <h6>+94 07624548456</h6>
-                            <a href="#" class="fa fa-linkedin" data-wow-delay="1.6s"></a>
+                            <h6 style="color: rgb(220, 221, 221);">+94 76 549 4272</h6>
+                            <a href="https://www.linkedin.com/in/thipuni00/" class="fa fa-linkedin"
+                                data-wow-delay="1.6s" target="_blank"></a>
                         </div>
                     </div>
                     <ul class="social-icon">
